<resources>
    <string name="app_name">Ciné Journal</string>
    <string name="titre">Titre</string>
    <string name="slogan">Slogan</string>
    <string name="ann_e">Année</string>
    <string name="note">Note</string>
    <string name="image">IMAGE</string>
    <string name="annuler">ANNULER</string>
    <string name="sauvegarder">SAUVEGARDER</string>
    <string name="titre_activity">Nouveau Film</string>
    <string name="mes_films">Mes films</string>
    <string name="ajouter">Ajouter</string>
    <string name="tri_par_titre">Tri par titre</string>
    <string name="tri_par_annee">Tri par année</string>
    <string name="tri_par_note">Tri par note</string>
    <string name="credits">Par Abderrahmane Katan et Salim Ben Youssef dans le cadre du cours 420-5GM-RE.</string>
    <string name="creditsAPI">Cette application utilise l’API The Movie Database (TMDB).</string>
    <string name="titre_film">Titre film</string>
    <string name="trouver_un_film">Trouver un film</string>
    <string name="titre_du_film">Titre du film</string>
    <string name="rechercher">Rechercher</string>
    <string name="messageAjouterFilm">Rien pour le moment, ajoutez un premier film !</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="prev">avant</string>
    <string name="next">apres</string>
    <string name="add">Ajouter</string>
</resources>